--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "next-env.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "prisma/**/*.ts"
+    "prisma/**/*.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
