Add direct connection for Prisma migrations

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Local development (docker compose db)
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/next_saas?schema=public"
+
+# Direct connection for migrations (use non-pooled URL on Neon)
+DIRECT_URL="postgresql://postgres:postgres@localhost:5432/next_saas?schema=public"
